# react-native-shiki-engine

./: .clang-format  .gitignore  .gitmodules  .oxlintrc.json  .watchmanconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  eslint.config.mjs  eslint.config.ts  knip.jsonc  metro.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native-shiki-engine.podspec  react-native-shiki.podspec  react-native.config.js  tsconfig.json  turbo.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: build-android.yml  build-ios.yml  check-onig-version.yml  release.yml  validate-cpp.yml  validate-ts.yml
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: ShikiHighlighter.cpp  cpp-adapter.cpp  shiki-bridge.cpp  shiki-bridge.h
android/src/main/cpp/impl/: AndroidHighlighter.cpp  AndroidHighlighter.h
android/src/main/java/com/shikiengine/: ShikiEngineModule.java  ShikiEnginePackage.java
android/src/main/kotlin/com/shiki/: ShikiBridge.kt  ShikiClipboard.kt  ShikiHighlighter.kt  ShikiPackage.kt
android/src/main/kotlin/com/shiki/view/: ShikiHighlighterView.kt  ShikiHighlighterViewManager.kt
apple/: ShikiHighlighter.h  ShikiHighlighter.mm  ShikiHighlighterView.h  ShikiHighlighterView.mm  ShikiHighlighterViewManager.mm
apple/Oniguruma.xcframework/: Info.plist
cpp/: NativeShikiEngineModule.cpp  NativeShikiEngineModule.h  onig_context.hpp  onig_regex.cpp  onig_regex.h
cpp/engine/: OnigurumaContext.h  OnigurumaRegex.cpp  OnigurumaRegex.h
cpp/fabric/: ShikiHighlighterComponent.cpp  ShikiHighlighterComponent.h  ShikiHighlighterComponentSpec.cpp  ShikiHighlighterComponentSpec.h
cpp/highlighter/cache/: Cache.h  (+7 more)
example/: app.json  babel.config.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
example/android/: settings.gradle
example/ios/: .xcode.env.local  File.swift  Podfile
example/src/: AdvancedView.tsx  App.tsx  shiki.d.ts
examples/expo-app/: App.tsx  App.web.tsx  app.json  babel.config.js  package.json  tsconfig.json
examples/react-native/: Gemfile  babel.config.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
examples/shared/: package.json  tsconfig.json
ios/: ShikiClipboard.h  ShikiClipboard.mm  ShikiEngineModule.h  ShikiEngineModule.mm  ShikiHighlighter.mm  ShikiHighlighterComponentsRegistry.mm  ShikiHighlighterModule.h  ShikiHighlighterModule.mm
ios/RTNTestView/: RTNTestView.h  RTNTestView.mm  RTNTestViewManager.mm
ios/fabric/: RCTShikiHighlighterComponentView.h  RCTShikiHighlighterComponentView.mm
ios/highlighter/: NativeHighlighter.h  NativeHighlighter.mm
ios/utils/: ShikiStyleManager.h  ShikiStyleManager.mm
ios/views/: LineNumberView.h  LineNumberView.mm  ShikiPerformanceMonitor.h  ShikiPerformanceMonitor.mm  ShikiPerformanceReporter.h  ShikiPerformanceReporter.mm  ShikiSelectionHistory.h  ShikiSelectionHistory.mm  ShikiSelectionManager.h  ShikiSelectionManager.mm  ShikiSelectionTypes.h  ShikiTextView.h  ShikiTextView.mm  ShikiUpdateCoordinator.h  ShikiUpdateCoordinator.mm  ShikiViewState.h  ShikiViewState.mm  ShikiVirtualizedContentManager.h  ShikiVirtualizedContentManager.mm
scripts/: build-android.sh  build-ios.sh  clang-format.sh  ktlint.sh
src/: NativeShikiEngine.ts  index.ts  shiki.d.ts
src/engine/: NativeShikiEngine.ts  index.ts  utils.ts
src/highlighter/: NativeShikiHighlighter.ts  createHighlighter.ts  index.ts  shorthands.ts  utils.ts  viewConfig.ts
src/hooks/: index.ts  useClipboard.ts  useShikiHighlighter.ts  useViewConfig.ts
src/react/: RTNTestView.tsx  ShikiHighlighterView.tsx  index.ts
src/specs/: NativeShikiBridge.ts  NativeShikiClipboard.ts  NativeShikiHighlighter.ts  RTNTestViewNativeComponent.ts  ShikiHighlighterViewNativeComponent.ts  index.ts
src/utils/: bridge.ts  clipboard.ts  highlighter.ts  index.ts  logger.ts
(+127 files in other folders)
